kubernetes/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: test-pod-container
    image: ghcr.io/heremias/test-app-web-main:latest
  imagePullSecrets:
  - name: ghcred
