kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    platform: test
  name: test
spec:
  ports:
    - port: 8000
  selector:
    platform: test
  type: NodePort
